--- a/planets.html
+++ b/planets.html
@@ -9,6 +9,9 @@
     #dateBox{width:180px;padding:4px;border:1px solid #666;background:#111;
              color:#0f0;text-align:center;font-size:16px;cursor:ns-resize}
     canvas:active{cursor:grabbing}
+    .footer{margin:2em auto;padding:1em;border-top:1px solid #444;max-width:600px}
+    .footer a{color:#4a9eff;text-decoration:none;margin:0 1em;font-size:14px}
+    .footer a:hover{color:#66b3ff;text-decoration:underline}
   </style>
 </head>
 <body>
@@ -125,5 +128,10 @@
   /* init */
   setBox(currentDate); draw(currentDate);
   </script>
+
+  <div class="footer">
+    <a href="index.html">🏠 Back to Scripts Collection</a>
+    <a href="https://github.com/Oleg-Imanilov/fun-scripts" target="_blank">📁 View on GitHub</a>
+  </div>
 </body>
 </html>
