--- a/index.html
+++ b/index.html
@@ -222,6 +222,19 @@
                 </ul>
                 <a href="text-doom.html" class="launch-btn">💥 Play Text Doom</a>
             </div>
+            <div class="script-card">
+                <div class="script-title">🌀 Hilbert Curve Explorer</div>
+                <div class="script-description">
+                    Visualize and interact with Hilbert curves, a classic fractal and space-filling pattern. Explore recursive geometry and see how the curve evolves with each iteration.
+                </div>
+                <ul class="script-features">
+                    <li>Adjust curve order (depth) interactively</li>
+                    <li>Animated drawing of the curve</li>
+                    <li>Colorful visualization with smooth transitions</li>
+                    <li>Learn about fractals and space-filling curves</li>
+                </ul>
+                <a href="hilbert.html" class="launch-btn">🌀 Explore Hilbert Curve</a>
+            </div>
         </div>
 
         <div class="coming-soon">
