--- a/index.html
+++ b/index.html
@@ -235,6 +235,19 @@
                 </ul>
                 <a href="hilbert.html" class="launch-btn">🌀 Explore Hilbert Curve</a>
             </div>
+            <div class="script-card">
+                <div class="script-title">🎡 Name Wheel Wizard</div>
+                <div class="script-description">
+                    An interactive spinning wheel for random name selection with a beautiful, modern interface. Perfect for giveaways, team selections, or any scenario requiring fair random choices.
+                </div>
+                <ul class="script-features">
+                    <li>Add, edit, and manage names easily</li>
+                    <li>Smooth spinning wheel animation</li>
+                    <li>Track winners with history</li>
+                    <li>Beautiful gradient design with blur effects</li>
+                </ul>
+                <a href="wheel.html" class="launch-btn">🎡 Spin the Wheel</a>
+            </div>
         </div>
 
         <div class="coming-soon">
