--- a/index.html
+++ b/index.html
@@ -248,6 +248,19 @@
                 </ul>
                 <a href="wheel.html" class="launch-btn">🎡 Spin the Wheel</a>
             </div>
+            <div class="script-card">
+                <div class="script-title">🎆 New Year Countdown</div>
+                <div class="script-description">
+                    A beautiful animated countdown to the New Year with fireworks, particles, and celebration effects. Watch as time ticks down to midnight with an immersive visual experience.
+                </div>
+                <ul class="script-features">
+                    <li>Real-time countdown with days, hours, minutes, and seconds</li>
+                    <li>Animated fireworks and particle effects</li>
+                    <li>Celebratory animations when the countdown reaches zero</li>
+                    <li>Festive gradient background with glowing effects</li>
+                </ul>
+                <a href="countdown.html" class="launch-btn">🎆 View Countdown</a>
+            </div>
         </div>
 
         <div class="coming-soon">
